syntax = "proto3";

package grpc;

service FeedbackService {
  rpc SaveFeedback(SaveFeedbackRequest) returns (SaveFeedbackResponse) {}
  rpc CheckFeedbackExistence(CheckFeedbackExistenceRequest) returns (CheckFeedbackExistenceResponse) {}
}

message SaveFeedbackRequest {
  string item_id = 1;
  int32 buyer_id = 2;
  bool feedback = 3;
}

message SaveFeedbackResponse {
  bool success = 1;
}

message CheckFeedbackExistenceRequest {
  string item_id = 1;
  int32 buyer_id = 2;
}

message CheckFeedbackExistenceResponse {
  bool exists = 1;
}
